packages/cashc/test/compiler/TypeError/for_loop_bytes32_condition.cash
contract ForLoopConditionTypeError() {
    function spend() {
        for (int i = 0; tx.inputs[0].outpointTransactionHash; i = i + 1) {
            require(i < 3);
        }
    }
}
